# graphforest

./: .gitignore  README.md
graphforest/: README.md  pyproject.toml
graphforest/examples/: ieee_benchmark.ipynb  synthetic_fraud_demo.ipynb
graphforest/graphforest/: __init__.py  classifier.py  explain.py  graph_builder.py  graph_features.py  neighborhood.py
graphforest/graphforest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
graphforest/graphforest/forest/: __init__.py  graph_forest.py  graph_tree.py
